fix headerWrap pixel height

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -14,7 +14,7 @@ body {
 
 #headerWrap {
   width: 100%;
-  height: 1000px;
+  height: 980px;
   margin-top: -15px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -22,6 +22,7 @@ body {
   text-align:center;
   text-transform: uppercase;
   color: white;
+
 }
 
 /*#headerLogo img {
